Prevent flicker

--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@
   }
 }
 
-[id$="-fill"] { 
+[id$="-fill"], #Tunings > g { 
   display: none;
 }
 
